# dev_utils

./: .gitignore  Cargo.toml  README.md
dev_macros/: Cargo.toml
dev_macros/src/: lib.rs
dev_utils/: Cargo.toml  README.md
dev_utils/examples/: README.md  base_change.rs  dlog.rs  formatting.rs  main_tester.rs  numbers.rs
dev_utils/src/: base_change.rs  datetime.rs  dlog.rs  file.rs  format.rs  lib.rs  performance.rs  prelude.rs
dev_utils/src/console/: format.rs  mod.rs
dev_utils/src/conversion/: base_change.rs  datetime.rs  mod.rs
dev_utils/src/files/: crud.rs  mod.rs
dev_utils/src/log/: log.rs  mod.rs
dev_utils/src/proto/crypto/: encryption.rs  hashing.rs
dev_utils/src/proto/key_logger/: input_events.rs  key_sequence.rs  mod.rs  time_events.rs
dev_utils/src/proto/network/http/: mod.rs  request.rs
dev_utils/src/proto/num_analysis/: mod.rs
dev_utils/src/proto/num_analysis/to_add_on_rust/: interpolation.ipynb  linear_systems_direct.ipynb  numerical_analysis.ipynb
dev_utils/src/proto/num_analysis/to_add_on_rust/NumericalAnalysis/: approximation.ipynb  differentiation.ipynb  integration.ipynb  linear_systems_iterative.ipynb  non_linear_systems.ipynb  one_variable_equations.ipynb
dev_utils/src/proto/num_analysis/to_add_on_rust/NumericalAnalysis/lib/: approximation.py  differentiation.py  integration.py  linear_systems_iterative.py  one_variable.py
dev_utils/src/proto/num_analysis/to_add_on_rust/lib/: interpolation.py  linear_systems_direct.py  non_linear_systems.py
src/: datetime.rs  files.rs  lib.rs  log.rs  main.rs  rlog.rs  terminal.rs
src/codex/: mod.rs
src/console/: format.rs  io.rs  mod.rs
src/conversion/: base_change.rs  datetime.rs  mod.rs
src/files/: crud.rs  mod.rs  toml.rs  yaml.rs
src/http/: mod.rs  request.rs  response.rs
src/log/: rlog.rs
test/: .gitkeep
