[package]
name = "dev_utils"
version = "0.0.3"
description = "A collection of utilities for development"
authors = ["Yrrrrrf <fernandorezacampos@gmail.com>"]
repository = "https://github.com/Yrrrrrf/dev_utils"
documentation = "https://docs.rs/dev_utils"
edition = "2021"
license = "MIT"
keywords = ["development", "utils", "utilities", "dev"]

[dependencies]
log = "0.4.*"  # for logging
