[package]
name = "dev_utils"
version = "0.0.13"
description = "A collection of utilities for development"
authors = ["Yrrrrrf <fernandorezacampos@gmail.com>"]
repository = "https://github.com/Yrrrrrf/dev_utils"
documentation = "https://docs.rs/dev_utils"
edition = "2021"
license = "MIT"
keywords = ["development", "utils", "utilities", "dev"]

# # Enable the following to make the crate a library
# [lib]
# proc-macro = true


# DEPENDENCIES -------------------------------------------------------------------------------
# pending: Remove all dependencies to make it a standalone crate...


[dependencies]
console = "0.15.*"  # console output (https://crates.io/crates/console)

# todo: Remove all dependencies to make it a standalone crate...
# log = "0.*"  # logging (https://crates.io/crates/log)
# dev_macros = { path = "../dev_macros" }


# DEV DEPENDENCIES ---------------------------------------------------------------------------
# [dev-dependencies]
# proc-macro2 = "1.*"
# quote = "1.*"
# syn = "2.*"

# tracing = "0.*"
# tracing-subscriber = "0.*"


# FEATURES ------------------------------------------------------------------------------------

# [features]
# default = []


# bench = []
# dev_macros = []
# key_logger = []



# full = [
#     "bench",
#     "dev_macros",
#     "key_logger",
# ]



# [dev-dependencies]
# 