[package]
name = "dev_utils"
version = "0.1.1-rc-2"
description = "A collection of utilities for development"
authors = ["Yrrrrrf <fernandorezacampos@gmail.com>"]
repository = "https://github.com/Yrrrrrf/dev_utils"
documentation = "https://docs.rs/dev_utils"
edition = "2021"
license = "MIT"
keywords = ["development", "utils", "utilities", "dev"]

exclude = [  # Exclude files from the package
    "examples/sample/*"  # exclude the sample folder
]

# [dependencies]
# dev_macros = { path = "../dev_macros" }

# [dev-dependencies]

# [features]
# default = []

# bench = []
# dev_macros = []
# key_logger = []

# full = [
#     "bench",
#     "dev_macros",
#     "key_logger",
# ]
